--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
     <!-- Navbar -->
     <div id="navbar-bar">
-        <a href="index.html"><img id="navbar-logo" src="css/img/z.svg"/></a>
+        <a href="./"><img id="navbar-logo" src="css/img/z.svg"/></a>
         <a href="#bodybox-works" class="navbar-item glow-small">Work</a>
-        <a href="gallery.html" class="navbar-item glow-small">Gallery</a>
+        <a href="./gallery" class="navbar-item glow-small">Gallery</a>
     </div>
 
     <!-- Main Headline -->
@@ -32,7 +32,7 @@
             </div>
             <div id="headline-buttons">
                 <a href="#bodybox-works"><button class="btn-headline">View Works</button></a>
-                <a href="gallery.html"><button class="btn-headline">Visit Gallery</button></a>
+                <a href=./"gallery"><button class="btn-headline">Visit Gallery</button></a>
             </div>
         </div>
     </div>
