--- a/gallery.html
+++ b/gallery.html
@@ -16,9 +16,9 @@
 
     <!-- Navbar -->
     <div id="navbar-bar">
-        <a href="index.html"><img id="navbar-logo" src="css/img/z.svg"/></a>
-        <a href="index.html#bodybox-works" class="navbar-item glow-small">Work</a>
-        <a href="gallery.html" class="navbar-item glow-small">Gallery</a>
+        <a href="./"><img id="navbar-logo" src="css/img/z.svg"/></a>
+        <a href="./#bodybox-works" class="navbar-item glow-small">Work</a>
+        <a href="./gallery" class="navbar-item glow-small">Gallery</a>
     </div>
 
     <!-- Gallery Page -->
