--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <div id="bodybox-headpage">
         <div id="bodybox-headline">
             <div>
-                <p class="font-size-14 letter-spacing-250">I'M ZHEN. WELCOME TO MY</p>
-                <h1 class="font-cigra glow-const">house of art.</h1>
-                <p>I bring visual solutions for your needs with my knowledge and skills. Whether I am to manage a role of leadership or to be a cog in a wheel, I will elevate your product or company. I bring visual solutions for your needs with my knowledge and skills. Whether I am to manage a role of leadership or to be a cog in a wheel, I will elevate your product or company.</p>              
+                <p class="font-size-14 font-color-mauve200 letter-spacing-250">I'M ZHEN. WELCOME TO MY</p>
+                <h1 class="font-cigra">house of art.</h1>
+                <p class="font-color-mauve200">I bring visual solutions for your needs with my knowledge and skills. Whether I am to manage a role of leadership or to be a cog in a wheel, I will elevate your product or company. I bring visual solutions for your needs with my knowledge and skills. Whether I am to manage a role of leadership or to be a cog in a wheel, I will elevate your product or company.</p>              
             </div>
             <div id="headline-buttons">
                 <a href="#bodybox-works"><button class="btn-headline">View Works</button></a>
@@ -40,20 +40,20 @@
     <!-- Selected Works -->
     <div id="bodybox-works">
         <div>
-            <p class="font-size-14 letter-spacing-250">CLICK TO VIEW</p>
-            <h2 class="font-cigra glow-const">selected works.</h2>
+            <p class="font-size-14 font-color-mauve200 letter-spacing-250">CLICK TO VIEW</p>
+            <h2 class="font-cigra">selected works.</h2>
         </div>
         
         <div class="bodybox-works-section">
             <a href="#">
                 <div class="works-section-card">
-                    <p class="font-size-14 letter-spacing-250">AURIGAMI</p>
+                    <p class="font-size-14 font-color-mauve200 letter-spacing-250">AURIGAMI</p>
                     <h3>Web3 DeFi App and Web2 Landing Page Design</h3>
                 </div>
             </a>
             <a href="#">
                 <div class="works-section-card">
-                    <p class="font-size-14 letter-spacing-250">AURIGAMI</p>
+                    <p class="font-size-14 font-color-mauve200 letter-spacing-250">AURIGAMI</p>
                     <h3>Web3 App Brand Identity</h3>
                 </div>
             </a>
@@ -62,13 +62,13 @@
         <div class="bodybox-works-section">
             <a href="#">
                 <div class="works-section-card">
-                    <p class="font-size-14 letter-spacing-250">SOULDUST</p>
+                    <p class="font-size-14 font-color-mauve200 letter-spacing-250">SOULDUST</p>
                     <h3>Malaysian Streetwear Brand</h3>
                 </div>
             </a>
             <a href="#">
                 <div class="works-section-card">
-                    <p class="font-size-14 letter-spacing-250">ECOWORLD</p>
+                    <p class="font-size-14 font-color-mauve200 letter-spacing-250">ECOWORLD</p>
                     <h3>Ecoworld Financial Report</h3>
                 </div>
             </a>
@@ -77,13 +77,13 @@
         <div class="bodybox-works-section">
             <a href="#">
                 <div class="works-section-card">
-                    <p class="font-size-14 letter-spacing-250">WELOVE FOOD ENTERPRISE</p>
+                    <p class="font-size-14 font-color-mauve200 letter-spacing-250">WELOVE FOOD ENTERPRISE</p>
                     <h3>Rebrand for Local Food Vendor</h3>
                 </div>
             </a>
             <a href="#">
                 <div class="works-section-card">
-                    <p class="font-size-14 letter-spacing-250">VORT3X</p>
+                    <p class="font-size-14 font-color-mauve200 letter-spacing-250">VORT3X</p>
                     <h3>Mask Angpao Design</h3>
                 </div>
             </a>
@@ -92,13 +92,13 @@
         <div class="bodybox-works-section">
             <a href="#">
                 <div class="works-section-card">
-                    <p class="font-size-14 letter-spacing-250">AURIGAMI</p>
+                    <p class="font-size-14 font-color-mauve200 letter-spacing-250">AURIGAMI</p>
                     <h3>Aurisprout: A Web3 Brand Mascot Design</h3>
                 </div>
             </a>
             <a href="#">
                 <div class="works-section-card">
-                    <p class="font-size-14 letter-spacing-250">HOUSE OF ART</p>
+                    <p class="font-size-14 font-color-mauve200 letter-spacing-250">HOUSE OF ART</p>
                     <h3>Webpage Building</h3>
                 </div>
             </a>
