--- a/gallery.html
+++ b/gallery.html
@@ -25,8 +25,8 @@
     <div id="bodybox-gallery">
 
         <div>
-            <p class="font-size-14 letter-spacing-250">WELCOME TO MY</p>
-            <h1 class="font-cigra glow-const">art gallery.</h1>
+            <p class="font-size-14 font-color-mauve200 letter-spacing-250">WELCOME TO MY</p>
+            <h1 class="font-cigra">art gallery.</h1>
         </div>
 
         <div class="bodybox-gallery-images">
