--- a/gallery.html
+++ b/gallery.html
@@ -60,8 +60,8 @@
 
     <!-- Footer -->
     <div class="footer">
-        <p class="footer-text font-size-12">©2024 Copyright Michelle Tang, </p>
-        <p class="footer-text font-size-12">Designed and developed by Michelle Tang</p>
+        <p class="footer-text font-size-12 font-color-mauve300">©2024 Copyright Michelle Tang, </p>
+        <p class="footer-text font-size-12 font-color-mauve300">Designed and developed by Michelle Tang</p>
     </div>
 
 </body>
