--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
         </div>
         
         <div class="bodybox-works-section">
-            <a href="#">
+            <a href="work.html">
                 <div class="works-section-card">
                     <p class="font-size-14 font-color-mauve200 letter-spacing-250">AURIGAMI</p>
                     <h3>Web3 DeFi App and Web2 Landing Page Design</h3>
                 </div>
             </a>
-            <a href="#">
+            <a href="work.html">
                 <div class="works-section-card">
                     <p class="font-size-14 font-color-mauve200 letter-spacing-250">AURIGAMI</p>
                     <h3>Web3 App Brand Identity</h3>
@@ -60,13 +60,13 @@
         </div>
 
         <div class="bodybox-works-section">
-            <a href="#">
+            <a href="work.html">
                 <div class="works-section-card">
                     <p class="font-size-14 font-color-mauve200 letter-spacing-250">SOULDUST</p>
                     <h3>Malaysian Streetwear Brand</h3>
                 </div>
             </a>
-            <a href="#">
+            <a href="work.html">
                 <div class="works-section-card">
                     <p class="font-size-14 font-color-mauve200 letter-spacing-250">ECOWORLD</p>
                     <h3>Ecoworld Financial Report</h3>
@@ -75,13 +75,13 @@
         </div>
 
         <div class="bodybox-works-section">
-            <a href="#">
+            <a href="work.html">
                 <div class="works-section-card">
                     <p class="font-size-14 font-color-mauve200 letter-spacing-250">WELOVE FOOD ENTERPRISE</p>
                     <h3>Rebrand for Local Food Vendor</h3>
                 </div>
             </a>
-            <a href="#">
+            <a href="work.html">
                 <div class="works-section-card">
                     <p class="font-size-14 font-color-mauve200 letter-spacing-250">VORT3X</p>
                     <h3>Mask Angpao Design</h3>
@@ -90,13 +90,13 @@
         </div>
 
         <div class="bodybox-works-section">
-            <a href="#">
+            <a href="work.html">
                 <div class="works-section-card">
                     <p class="font-size-14 font-color-mauve200 letter-spacing-250">AURIGAMI</p>
                     <h3>Aurisprout: A Web3 Brand Mascot Design</h3>
                 </div>
             </a>
-            <a href="#">
+            <a href="work.html">
                 <div class="works-section-card">
                     <p class="font-size-14 font-color-mauve200 letter-spacing-250">HOUSE OF ART</p>
                     <h3>Webpage Building</h3>
@@ -108,8 +108,8 @@
 
     <!-- Footer -->
     <div class="footer">
-        <p class="footer-text font-size-12">©2024 Copyright Michelle Tang, </p>
-        <p class="footer-text font-size-12">Designed and developed by Michelle Tang</p>
+        <p class="footer-text font-size-12 font-color-mauve200">©2024 Copyright Michelle Tang, </p>
+        <p class="footer-text font-size-12 font-color-mauve200">Designed and developed by Michelle Tang</p>
     </div>
 
 </body>
