--- a/work.html
+++ b/work.html
@@ -59,7 +59,8 @@
         <img class="project-image" src="css/img/placeholder.png"/>
     </div>
 
-    <!-- Next Project -->
+    <div id="testing">
+            <!-- Next Project -->
     <a href="work.html">
         <div  id="next-project-box">
             <div>
@@ -77,6 +78,7 @@
     <div class="footer">
         <p class="footer-text font-size-12 font-color-mauve200">©2024 Copyright Michelle Tang, </p>
         <p class="footer-text font-size-12 font-color-mauve200">Designed and developed by Michelle Tang</p>
+    </div>
     </div>
 
 </body>
