--- a/work.html
+++ b/work.html
@@ -59,26 +59,26 @@
         <img class="project-image" src="css/img/placeholder.png"/>
     </div>
 
-    <div id="testing">
-            <!-- Next Project -->
-    <a href="work.html">
-        <div  id="next-project-box">
-            <div>
-                <p class="font-size-14 letter-spacing-250">CLICK HERE TO VIEW</p>
-                <h2 class="font-cigra">the next project.</h2>
+    <div class="bottom-background">
+        <!-- Next Project -->
+        <a href="work.html">
+            <div  id="next-project-box">
+                <div>
+                    <p class="font-size-14 letter-spacing-250">CLICK HERE TO VIEW</p>
+                    <h2 class="font-cigra">the next project.</h2>
+                </div>
+                <div>
+                    <p class="font-weight-semibold font-size-14 inline-text">Project Name</p>
+                    <p class="font-size-14 inline-text"> – More About Project</p>
+                </div>
             </div>
-            <div>
-                <p class="font-weight-semibold font-size-14 inline-text">Project Name</p>
-                <p class="font-size-14 inline-text"> – More About Project</p>
-            </div>
-        </div>
-    </a>
+        </a>
 
-    <!-- Footer -->
-    <div class="footer">
-        <p class="footer-text font-size-12 font-color-mauve200">©2024 Copyright Michelle Tang, </p>
-        <p class="footer-text font-size-12 font-color-mauve200">Designed and developed by Michelle Tang</p>
-    </div>
+        <!-- Footer -->
+        <div id="footer">
+            <p class="footer-text font-size-12 font-color-mauve200">©2024 Copyright Michelle Tang, </p>
+            <p class="footer-text font-size-12 font-color-mauve200">Designed and developed by Michelle Tang</p>
+        </div>
     </div>
 
 </body>
