--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZHEN House of Art</title>
+    <title>works</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,97 +17,66 @@
     <!-- Navbar -->
     <div id="navbar-bar">
         <a href="index.html"><img id="navbar-logo" src="css/img/z.svg"/></a>
-        <a href="#bodybox-works" class="navbar-item glow-small">Work</a>
+        <a href="index.html#bodybox-works" class="navbar-item glow-small">Work</a>
         <a href="gallery.html" class="navbar-item glow-small">Gallery</a>
     </div>
 
-    <!-- Main Headline -->
-
-    <div id="bodybox-headpage">
-        <div id="bodybox-headline">
+    <!-- Project Details -->
+    <div id="bodybox-project">
+        <div class="project-summary-box">
             <div>
-                <p class="font-size-14 font-color-mauve200 letter-spacing-250">I'M ZHEN. WELCOME TO MY</p>
-                <h1 class="font-cigra">house of art.</h1>
-                <p class="font-color-mauve200">I bring visual solutions for your needs with my knowledge and skills. Whether I am to manage a role of leadership or to be a cog in a wheel, I will elevate your product or company. I bring visual solutions for your needs with my knowledge and skills. Whether I am to manage a role of leadership or to be a cog in a wheel, I will elevate your product or company.</p>              
+                <p class="font-size-14 font-color-mauve200 letter-spacing-250">PROJECT</p>
+                <h3 id="project-title">Long Title on What the Project is About</h3>
             </div>
-            <div id="headline-buttons">
-                <a href="#bodybox-works"><button class="btn-headline">View Works</button></a>
-                <a href="gallery.html"><button class="btn-headline">Visit Gallery</button></a>
+            <div>
+                <p class="font-size-14 font-color-mauve200 letter-spacing-250">MY ROLES</p>
+                <div>
+                    <h4 class="project-details">Role 1</h4>
+                    <h4 class="project-details">Role 2</h4>
+                    <h4 class="project-details">Role 3</h4>
+                </div>
+            </div>
+            <div>
+                <p class="font-size-14 font-color-mauve200 letter-spacing-250">CLIENT</p>
+                <h4 class="project-details">Company Name</h4>
+            </div>
+        </div>
+        <div>
+            <div class="project-summary-box">
+                <p class="project-summary mauve200">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec venenatis tellus. Nulla eget ex in justo sagittis lacinia sit amet ac ligula. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis non justo sit amet sem mattis porta a id erat. Pellentesque libero odio, varius quis pharetra quis, tempus sit amet dolor. Fusce convallis consectetur lectus quis aliquet. Proin auctor arcu vel facilisis porta. Proin ultrices magna vehicula libero venenatis, ac finibus nisi sodales. Mauris porta luctus risus at pharetra. Aliquam velit augue, sollicitudin nec bibendum quis, luctus id augue.</p>
+                <p class="project-summary mauve200">Mauris pharetra ligula iaculis velit varius scelerisque. Vivamus pretium sapien nec quam auctor elementum. Nam tristique accumsan eros, at faucibus magna efficitur sit amet. Cras condimentum accumsan tellus, nec laoreet est lobortis vel. Maecenas aliquam sapien vel elit vestibulum pulvinar. Cras laoreet turpis odio, sed aliquam enim euismod eu. Etiam vestibulum ante nec leo interdum sagittis. Mauris non sodales orci. Nunc tincidunt gravida erat in dignissim.</p>
+                <p class="project-summary mauve200">Curabitur quis erat finibus, finibus lectus quis, laoreet magna. Phasellus vestibulum mauris sit amet nulla euismod lacinia non in tortor. Etiam ultricies arcu vel nisi molestie fringilla. Integer varius efficitur scelerisque. Suspendisse eu sodales quam. Aliquam scelerisque lobortis ultricies. Fusce vitae nibh ac dui interdum faucibus interdum vitae libero. Curabitur a varius turpis, vel rhoncus massa.</p>
+                <p class="project-summary mauve200">Nam vitae lectus convallis, aliquam lectus eget, consequat odio. Duis maximus lobortis fringilla. Proin tellus libero, elementum vitae efficitur at, placerat sed sapien. Curabitur bibendum risus in lorem consectetur varius. Phasellus iaculis tellus vitae aliquet condimentum. Nam condimentum vitae purus sit amet sodales. Suspendisse malesuada quis neque at tristique. Integer molestie lorem quis lorem fermentum vehicula. Nunc venenatis, metus id facilisis viverra, est tortor finibus ante, vel lacinia nisl elit sed diam. In lacinia, ante sit amet congue congue, eros dui luctus orci, et elementum nulla nibh in diam.</p>
             </div>
         </div>
     </div>
 
-    <!-- Selected Works -->
-    <div id="bodybox-works">
-        <div>
-            <p class="font-size-14 font-color-mauve200 letter-spacing-250">CLICK TO VIEW</p>
-            <h2 class="font-cigra">selected works.</h2>
-        </div>
-        
-        <div class="bodybox-works-section">
-            <a href="work.html">
-                <div class="works-section-card">
-                    <p class="font-size-14 font-color-mauve200 letter-spacing-250">AURIGAMI</p>
-                    <h3>Web3 DeFi App and Web2 Landing Page Design</h3>
-                </div>
-            </a>
-            <a href="work.html">
-                <div class="works-section-card">
-                    <p class="font-size-14 font-color-mauve200 letter-spacing-250">AURIGAMI</p>
-                    <h3>Web3 App Brand Identity</h3>
-                </div>
-            </a>
-        </div>
+    <!-- Visual Data -->
+    <div class="project-image-box">
+        <img class="project-image" src="css/img/placeholder.png"/>
+        <img class="project-image" src="css/img/placeholder.png"/>
+        <img class="project-image" src="css/img/placeholder.png"/>
+        <img class="project-image" src="css/img/placeholder.png"/>
+    </div>
 
-        <div class="bodybox-works-section">
-            <a href="work.html">
-                <div class="works-section-card">
-                    <p class="font-size-14 font-color-mauve200 letter-spacing-250">SOULDUST</p>
-                    <h3>Malaysian Streetwear Brand</h3>
+    <div id="next-project-background">
+        <!-- Next Project -->
+        <a href="work.html">
+            <div  id="next-project-box">
+                <div>
+                    <p class="font-size-14 letter-spacing-250">CLICK HERE TO VIEW</p>
+                    <h2 class="font-cigra">the next project.</h2>
                 </div>
-            </a>
-            <a href="work.html">
-                <div class="works-section-card">
-                    <p class="font-size-14 font-color-mauve200 letter-spacing-250">ECOWORLD</p>
-                    <h3>Ecoworld Financial Report</h3>
+                <div>
+                    <p class="font-weight-semibold font-size-14 inline-text">Project Name</p>
+                    <p class="font-size-14 inline-text"> – More About Project</p>
                 </div>
-            </a>
-        </div>
-
-        <div class="bodybox-works-section">
-            <a href="work.html">
-                <div class="works-section-card">
-                    <p class="font-size-14 font-color-mauve200 letter-spacing-250">WELOVE FOOD ENTERPRISE</p>
-                    <h3>Rebrand for Local Food Vendor</h3>
-                </div>
-            </a>
-            <a href="work.html">
-                <div class="works-section-card">
-                    <p class="font-size-14 font-color-mauve200 letter-spacing-250">VORT3X</p>
-                    <h3>Mask Angpao Design</h3>
-                </div>
-            </a>
-        </div>
-
-        <div class="bodybox-works-section">
-            <a href="work.html">
-                <div class="works-section-card">
-                    <p class="font-size-14 font-color-mauve200 letter-spacing-250">AURIGAMI</p>
-                    <h3>Aurisprout: A Web3 Brand Mascot Design</h3>
-                </div>
-            </a>
-            <a href="work.html">
-                <div class="works-section-card">
-                    <p class="font-size-14 font-color-mauve200 letter-spacing-250">HOUSE OF ART</p>
-                    <h3>Webpage Building</h3>
-                </div>
-            </a>
-        </div>
-
+            </div>
+        </a>
     </div>
 
     <!-- Footer -->
-    <div class="footer">
+    <div id="footer">
         <p class="footer-text font-size-12 font-color-mauve200">©2024 Copyright Michelle Tang, </p>
         <p class="footer-text font-size-12 font-color-mauve200">Designed and developed by Michelle Tang</p>
     </div>
