--- a/work.html
+++ b/work.html
@@ -57,9 +57,12 @@
         <img class="project-image" src="css/img/placeholder.png"/>
         <img class="project-image" src="css/img/placeholder.png"/>
         <img class="project-image" src="css/img/placeholder.png"/>
+        <img class="project-image" src="css/img/placeholder.png"/>
+        <img class="project-image" src="css/img/placeholder.png"/>
+        <img class="project-image" src="css/img/placeholder.png"/>
     </div>
 
-    <div class="bottom-background">
+    <div id="next-project-background">
         <!-- Next Project -->
         <a href="work.html">
             <div  id="next-project-box">
@@ -73,12 +76,12 @@
                 </div>
             </div>
         </a>
+    </div>
 
-        <!-- Footer -->
-        <div id="footer">
-            <p class="footer-text font-size-12 font-color-mauve200">©2024 Copyright Michelle Tang, </p>
-            <p class="footer-text font-size-12 font-color-mauve200">Designed and developed by Michelle Tang</p>
-        </div>
+    <!-- Footer -->
+    <div id="footer">
+        <p class="footer-text font-size-12 font-color-mauve200">©2024 Copyright Michelle Tang, </p>
+        <p class="footer-text font-size-12 font-color-mauve200">Designed and developed by Michelle Tang</p>
     </div>
 
 </body>
