--- a/gallery.html
+++ b/gallery.html
@@ -59,7 +59,7 @@
     </div>
 
     <!-- Footer -->
-    <div class="footer">
+    <div id="footer">
         <p class="footer-text font-size-12 font-color-mauve300">©2024 Copyright Michelle Tang, </p>
         <p class="footer-text font-size-12 font-color-mauve300">Designed and developed by Michelle Tang</p>
     </div>
