--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Navbar -->
     <div id="navbar-bar">
         <a href="index.html"><img id="navbar-logo" src="css/img/z.svg"/></a>
-        <a href="#bodybox-works" class="navbar-item glow-small">Work</a>
+        <a href="index.html#bodybox-works" class="navbar-item glow-small">Work</a>
         <a href="gallery.html" class="navbar-item glow-small">Gallery</a>
     </div>
 
@@ -46,13 +46,13 @@
         
         <div class="bodybox-works-section">
             <a href="aurigami-dapp.html">
-                <div class="works-section-card">
+                <div id="thumbnail-aurigami-dapp" class="works-section-card">
                     <p class="font-size-14 font-color-mauve200 letter-spacing-250">AURIGAMI FINANCE</p>
                     <h3>Web3 DeFi App and Web2 Landing Page Design</h3>
                 </div>
             </a>
             <a href="aurigami-brand.html">
-                <div class="works-section-card">
+                <div id="thumbnail-aurigami-brand" class="works-section-card">
                     <p class="font-size-14 font-color-mauve200 letter-spacing-250">AURIGAMI FINANCE</p>
                     <h3>Web3 App Brand Identity Design</h3>
                 </div>
@@ -61,13 +61,13 @@
 
         <div class="bodybox-works-section">
             <a href="souldust.html">
-                <div class="works-section-card">
+                <div id="thumbnail-souldust" class="works-section-card">
                     <p class="font-size-14 font-color-mauve200 letter-spacing-250">SOULDUST</p>
                     <h3>Brand Identity Design and Launching of Malaysian Streetwear Brand</h3>
                 </div>
             </a>
             <a href="ecoworld.html">
-                <div class="works-section-card">
+                <div id="thumbnail-ecoworld" class="works-section-card">
                     <p class="font-size-14 font-color-mauve200 letter-spacing-250">ECOWORLD</p>
                     <h3>A Digitally Interactive Financial Report for Land Developer</h3>
                 </div>
@@ -76,13 +76,13 @@
 
         <div class="bodybox-works-section">
             <a href="welovefood.html">
-                <div class="works-section-card">
+                <div id="thumbnail-welovefood" class="works-section-card">
                     <p class="font-size-14 font-color-mauve200 letter-spacing-250">WELOVE FOOD ENTERPRISE</p>
                     <h3>Brand Identity Design for Malaysian Local Food Vendor</h3>
                 </div>
             </a>
             <a href="vort3x.html">
-                <div class="works-section-card">
+                <div id="thumbnail-vort3x" class="works-section-card">
                     <p class="font-size-14 font-color-mauve200 letter-spacing-250">VORT3X</p>
                     <h3>Pioneer Design and Template for Sticker-Mask Angpao</h3>
                 </div>
@@ -91,13 +91,13 @@
 
         <div class="bodybox-works-section">
             <a href="aurigami-mascot.html">
-                <div class="works-section-card">
+                <div id="thumbnail-aurigami-mascot" class="works-section-card">
                     <p class="font-size-14 font-color-mauve200 letter-spacing-250">AURIGAMI FINANCE</p>
                     <h3>Aurisprout: A DeFi Mascot (2D Illustrated and 3D Modelled)</h3>
                 </div>
             </a>
             <a href="house.html">
-                <div class="works-section-card">
+                <div id="thumbnail-house" class="works-section-card">
                     <p class="font-size-14 font-color-mauve200 letter-spacing-250">ZHEN HOUSE OF ART</p>
                     <h3>The Story of the House of Art</h3>
                 </div>
