--- a/souldust.html
+++ b/souldust.html
@@ -54,13 +54,17 @@
 
     <!-- Visual Data -->
     <div class="project-image-box">
-        <img class="project-image" src="css/img/placeholder.png"/>
-        <img class="project-image" src="css/img/placeholder.png"/>
-        <img class="project-image" src="css/img/placeholder.png"/>
-        <img class="project-image" src="css/img/placeholder.png"/>
-        <img class="project-image" src="css/img/placeholder.png"/>
-        <img class="project-image" src="css/img/placeholder.png"/>
-        <img class="project-image" src="css/img/placeholder.png"/>
+        <img class="project-image" src="css/img/souldust/souldust-page-01.png"/>
+        <img class="project-image" src="css/img/souldust/souldust-page-02.png"/>
+        <img class="project-image" src="css/img/souldust/souldust-page-03.png"/>
+        <img class="project-image" src="css/img/souldust/souldust-page-04.png"/>
+        <img class="project-image" src="css/img/souldust/souldust-page-05.png"/>
+        <img class="project-image" src="css/img/souldust/souldust-page-06.png"/>
+        <img class="project-image" src="css/img/souldust/souldust-page-07.png"/>
+        <img class="project-image" src="css/img/souldust/souldust-page-08.png"/>
+        <img class="project-image" src="css/img/souldust/souldust-page-09.png"/>
+        <img class="project-image" src="css/img/souldust/souldust-page-10.png"/>
+        <img class="project-image" src="css/img/souldust/souldust-page-11.png"/>
     </div>
 
     <div id="next-project-background">
