--- a/welovefood.html
+++ b/welovefood.html
@@ -52,13 +52,11 @@
 
     <!-- Visual Data -->
     <div class="project-image-box">
-        <img class="project-image" src="css/img/placeholder.png"/>
-        <img class="project-image" src="css/img/placeholder.png"/>
-        <img class="project-image" src="css/img/placeholder.png"/>
-        <img class="project-image" src="css/img/placeholder.png"/>
-        <img class="project-image" src="css/img/placeholder.png"/>
-        <img class="project-image" src="css/img/placeholder.png"/>
-        <img class="project-image" src="css/img/placeholder.png"/>
+        <img class="project-image" src="css/img/welovefood/welovefood-page-01.png"/>
+        <img class="project-image" src="css/img/welovefood/welovefood-page-02.png"/>
+        <img class="project-image" src="css/img/welovefood/welovefood-page-03.png"/>
+        <img class="project-image" src="css/img/welovefood/welovefood-page-04.png"/>
+        <img class="project-image" src="css/img/welovefood/welovefood-page-05.png"/>
     </div>
 
     <div id="next-project-background">
