--- a/aurigami-mascot.html
+++ b/aurigami-mascot.html
@@ -54,12 +54,9 @@
     <!-- Visual Data -->
     <div class="project-image-box">
         <img class="project-image" src="css/img/placeholder.png"/>
-        <img class="project-image" src="css/img/placeholder.png"/>
-        <img class="project-image" src="css/img/placeholder.png"/>
-        <img class="project-image" src="css/img/placeholder.png"/>
-        <img class="project-image" src="css/img/placeholder.png"/>
-        <img class="project-image" src="css/img/placeholder.png"/>
-        <img class="project-image" src="css/img/placeholder.png"/>
+        <video controls loop class="project-image">
+            <source src="css/img/aurigami-mascot/aurigami-mascot-3D.mp4" type="video/mp4"/>
+        </video>
     </div>
 
     <div id="next-project-background">
